# bloomdow

./: .gitignore  README.md  bloom-context.md  pyproject.toml
src/bloomdow/: __init__.py  analysis.py  cli.py  config.py  cross_judge.py  experiment.py  llm.py  models.py  pipeline.py  report.py
src/bloomdow/prompts/: ideation.py  judgment.py  rollout.py  scoping.py  understanding.py
src/bloomdow/stages/: ideation.py  judgment.py  rollout.py  scoping.py  understanding.py
ui/: INTEGRATION.md  LITELLM.md  README.md  start.bat  start.ps1  start.sh
ui/backend/: .env.example  db.py  main.py  requirements.txt
ui/frontend/: package-lock.json  package.json  tailwind.config.js
ui/frontend/src/: App.tsx  index.css
ui/frontend/src/components/: EvalForm.tsx  HistorySidebar.tsx  LiveProgress.tsx  ReportView.tsx
ui/frontend/src/lib/: api.ts  utils.ts
