[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloomdow"
version = "0.1.0"
description = "Autonomous existential-risk behavioral evaluation framework for LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "litellm>=1.40.0",
    "numpy>=1.24.0",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
]

[project.scripts]
bloomdow = "bloomdow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
